@@ -1,4 +1,4 @@
-scrub: using NNSA NAP-14.x patterns
+scrub: using NNSA NAP-14.1-C patterns
 scrub: scrubbing file 409600 bytes (~400KB)
 scrub: random  |................................................|
 scrub: random  |................................................|
