@@ -1,4 +1,4 @@
-scrub: using NNSA NAP-14.x patterns
+scrub: using NNSA NAP-14.1-C patterns
 scrub: scrubbing file 409600 bytes (~400KB)
 scrub: random  |................................................|
 scrub: random  |................................................|
@@ -6,14 +6,14 @@ scrub: 0x00    |................................................|
 scrub: verify  |................................................|
 409600
 scrub: warning: -s size < file size
-scrub: using NNSA NAP-14.x patterns
+scrub: using NNSA NAP-14.1-C patterns
 scrub: scrubbing file 307200 bytes (~300KB)
 scrub: random  |................................................|
 scrub: random  |................................................|
 scrub: 0x00    |................................................|
 scrub: verify  |................................................|
 409600
-scrub: using NNSA NAP-14.x patterns
+scrub: using NNSA NAP-14.1-C patterns
 scrub: scrubbing file 512000 bytes (~500KB)
 scrub: random  |................................................|
 scrub: random  |................................................|
